--- a/css/base.css
+++ b/css/base.css
@@ -10,10 +10,15 @@ h1, h2, h3, h4, h5, h6, p{
 
 a{
     text-decoration: none;
+    color: black;
 }
 
 img{
     margin: 0;
     width: 100%;
     height: auto;
+}
+ ul{
+    margin: 0;
+    padding: 0;
 }
