--- a/css/styles.css
+++ b/css/styles.css
@@ -1,83 +1,81 @@
-body{
-    background-color: #F5F5F5;
+body {
+  background-color: #f5f5f5;
 }
 
-.second-title{
-    font-size: 48px;
-    font-weight: 900;
+.second-title {
+  font-size: 48px;
+  font-weight: 900;
 }
 
-.visually-hidden{
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
 
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip:rect(0,0,0,0);
-    overflow: hidden;
-
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0, 0, 0, 0);
+  overflow: hidden;
 }
 
-.conteiner{
-    max-width: 1280px;
-    margin: 0;
-    padding-left: 40px;
-    padding-right: 40px;
-    margin-left: auto;
-    margin-right: auto;
+.conteiner {
+  max-width: 1280px;
+  margin: 0;
+  padding-left: 40px;
+  padding-right: 40px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.header{
-    z-index: 1;
-    position: fixed;
-    width: 100%;
-    height: 130px;
-    top: 0;
-    left: 0;
+.header {
+  z-index: 1;
+  position: fixed;
+  width: 100%;
+  height: 130px;
+  top: 0;
+  left: 0;
 
-    background-color: #fff;
+  background-color: #fff;
 }
 
-.header-conteiner{
-    display: flex;
-    height: 100%;
+.header-conteiner {
+  display: flex;
+  height: 100%;
 }
 
-.logo-link{
-    padding-top: 16px;
-    padding-bottom: 16px;
-
+.logo-link {
+  padding-top: 16px;
+  padding-bottom: 16px;
 }
-.logo-img{
-    width: 294px;
-    height: 93px;
-}
-
-.nav{
-    display: flex;
+.logo-img {
+  width: 294px;
+  height: 93px;
 }
 
-.nav-list{
-    display: flex;
-    margin-left: auto;
+.nav {
+  display: flex;
 }
 
-.nav-item{
-    padding-top: 48px;
-    padding-bottom: 48px;
-    font-size: 20px;
-    font-weight: 400;
+.nav-list {
+  display: flex;
+  margin-left: auto;
 }
 
-.nav-item:not(:last-child){
-    margin-right: 37px;
+.nav-item {
+  padding-top: 48px;
+  padding-bottom: 48px;
+  font-size: 20px;
+  font-weight: 400;
 }
 
-.hero{
+.nav-item:not(:last-child) {
+  margin-right: 37px;
+}
+
+/* .hero{
     padding-top: 130px;
     background-color: #fff;
 }
@@ -112,156 +110,267 @@ body{
 .hero-img{
     width: 764px;
     height: 721px;
+} */
+
+.hero {
+  padding-top: 130px;
+  background-color: #fff;
 }
 
-.housing{
-    padding-top: 58px;
-    padding-bottom: 122px;
+.hero-conteiner {
+  position: relative;
+  /* display: flex; */
+  display: grid;
+  /* grid-template-columns: 50% 50%; */
+  /* grid-template-rows: 25% 25% 25% 25%; */
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  /* grid-template-rows: [row1-start] 25% [row1-end] 25% [third-line] 25% [last-line]25%; */
 }
 
-.housing-list{
-    display: flex;
+.main-title {
+  display: block;
+  /* margin-top: 270px;
+    margin-bottom: 204px; */
+  /* grid-column-start: 1; */
+  /* grid-column-end: 2; */
+  /* grid-row-start: 2; */
+  /* grid-row-end: 3; */
+  grid-area: 2/1/3/2;
 
-    font-size: 16px;
-    font-weight: 300;
+  align-self: center;
+
+  font-size: 64px;
+  font-weight: 900;
 }
 
-.housing-item:not(:last-child){
-    margin-right: 113px;
+.hero-contents {
+  position: absolute;
+  /* right: 0; */
+  /* top: 0; */
+
+  /* grid-column-start: 2; */
+  /* grid-column-end: 2; */
+  /* grid-row-start: 1; */
+  /* grid-row-end: 5; */
+
+  grid-area: 1/2/5/3;
+
+  margin-right: -40px;
 }
 
-.housing-amount{
-    display: block;
-    
-    font-size: 96px;
+.contents-text {
+  margin-top: 19px;
+  /* width: 764px; */
+  font-size: 14px;
+  font-weight: 400;
 }
 
-.projects-list{
-    padding-bottom: 48px;
+.hero-img {
+  /* width: 764px;
+    height: 721px; */
 }
 
-.project-item{
-    width: 384.33px;
-    margin-top: 31px;
+.housing {
+  /* padding-top: 58px;
+    padding-bottom: 122px; */
+  /* grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 4;
+  grid-row-end: 5;
+
+  grid-area: 4/1/5/2;
+
+  align-self: center; */
+  padding-top: 20px;
 }
 
-.projects-img{
-    /* width: 384.33px; */
-    /* height: 319.79px; */
-    border-radius: 3%;
+.housing-list {
+  display: flex;
+
+  font-size: 16px;
+  font-weight: 300;
 }
 
-.project-title{
-    margin-top: 4px;
-    font-size: 20px;
-    margin-bottom: 3px;
-    font-weight: 400;
-    /* width: 384.33px; */
-    text-align: center;
-
+.housing-item:not(:last-child) {
+  margin-right: 113px;
 }
 
-.project-date{
-    font-size: 16px;
-    font-weight: 400;
-    width: 384.33px;
-    text-align: center;
+.housing-amount {
+  display: block;
+
+  font-size: 96px;
 }
 
-.main-button{
-    display: block;
-    margin: auto;
-    width: 272px;
-    height: 52px;
-
-    border: 2px solid #087313;
-    border-radius: 60px;
-    background-color: #F5F5F5;
-
-    font-size: 24px;
-    font-weight: 400;
+.projects-conteiner {
+  padding-top: 122px;
+}
+.projects-list {
+  padding-bottom: 48px;
 }
 
-.news-conteiner{
-    padding-bottom: 119.5px;
-
-    border-bottom: 1px solid #000000;
+.project-item {
+  width: 384.33px;
+  margin-top: 31px;
 }
 
-.news-list{
-    padding-top: 41px;
-    padding-bottom: 48px;
-
+.projects-img {
+  /* width: 384.33px; */
+  /* height: 319.79px; */
+  border-radius: 3%;
 }
 
-.news-item{
-    width: 384.33px;
+.project-title {
+  margin-top: 4px;
+  font-size: 20px;
+  margin-bottom: 3px;
+  font-weight: 400;
+  /* width: 384.33px; */
+  text-align: center;
 }
 
-.news-date{
-    margin-top: 16px;
-
-    font-size: 14px;
-    font-weight: 400;
+.project-date {
+  font-size: 16px;
+  font-weight: 400;
+  width: 384.33px;
+  text-align: center;
 }
 
-.news-title{
-    margin-top: 4px;
-    font-size: 20px;
-    font-weight: 400;
+.main-button {
+  display: block;
+  margin: auto;
+  width: 272px;
+  height: 52px;
+
+  border: 2px solid #087313;
+  border-radius: 60px;
+  background-color: #f5f5f5;
+
+  font-size: 24px;
+  font-weight: 400;
 }
 
-.news-text{
-    margin-top: 8px;
-    font-size: 14px;
-    font-weight: 400;
+.news-conteiner {
+  padding-bottom: 119.5px;
 
+  
 }
 
-.footer-conteiner{
-    padding-top: 21.5px;
-    padding-bottom: 114px;
+.news-list {
+  padding-top: 41px;
+  padding-bottom: 48px;
 }
 
-.contacts-list{
-    margin-top: 52px;
-    padding-bottom: 33px;
-
-    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+.news-item {
+  width: 384.33px;
 }
 
-.contakts-item{
-    margin-bottom: 24px;
-    font-size: 16px;
-    font-weight: 400;
+.news-date {
+  margin-top: 16px;
+
+  font-size: 14px;
+  font-weight: 400;
 }
 
-.contacts-kind{
-    margin-bottom: 8px;
-
-    font-size: 20px;
-    font-weight: 400;
+.news-title {
+  margin-top: 4px;
+  font-size: 20px;
+  font-weight: 400;
 }
 
-.contacts-link{
-    border-bottom: 1px solid #007825;
+.news-text {
+  margin-top: 8px;
+  font-size: 14px;
+  font-weight: 400;
 }
 
-.copyright{
-    display: flex;
-    padding-top: 19px;
+.footer-conteiner {
+  padding-top: 21.5px;
+  padding-bottom: 114px;
+
+  border-top: 1px solid #000000;
 }
 
-.copyright-paragraph{
-    font-size: 16px;
-    font-weight: 400;
+.contacts-list {
+  margin-top: 52px;
+  padding-bottom: 33px;
+
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
 }
 
-.social-list{
-    display: flex;
-    margin-left: auto;
+.contakts-item {
+  margin-bottom: 24px;
+  font-size: 16px;
+  font-weight: 400;
 }
 
-.social-item:not(:last-child){
-    margin-right: 24px;
+.contacts-kind {
+  margin-bottom: 8px;
+
+  font-size: 20px;
+  font-weight: 400;
 }
+
+.contacts-link {
+  border-bottom: 1px solid #007825;
+}
+
+.copyright {
+  display: flex;
+  padding-top: 19px;
+}
+
+.copyright-paragraph {
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.social-list {
+  display: flex;
+  margin-left: auto;
+}
+
+.social-item:not(:last-child) {
+  margin-right: 24px;
+}
+
+/**/
+
+.button-list {
+  display: flex;
+
+  margin-top: 47px;
+  margin-bottom: 31px;
+  justify-content: center;
+}
+
+.button-item:not(:last-child) {
+  margin-right: 5px;
+}
+
+.button-item button {
+  padding: 12px 24px;
+  font-size: 20px;
+  font-weight: 400;
+  /* border-radius: 40%; */
+
+  display: block;
+  height: 48px;
+
+  border: 1px solid rgba(0, 0, 0, 0.49);
+  border-radius: 60px;
+  background-color: #f5f5f5;
+
+  font-size: 20px;
+  font-weight: 400;
+}
+ /**/
+
+ .news{
+   padding-top: 130px; 
+ }
+
+ .page-title{
+    background-color: #fff;
+    padding-top: 130px;
+ }
