--- a/css/styles.css
+++ b/css/styles.css
@@ -166,11 +166,6 @@ body {
   font-weight: 400;
 }
 
-.hero-img {
-  /* width: 764px;
-    height: 721px; */
-}
-
 .housing {
   /* padding-top: 58px;
     padding-bottom: 122px; */
@@ -368,7 +363,7 @@ body {
 
  .news{
    padding-top: 130px; 
- }
+ }p
 
  .page-title{
     background-color: #fff;
