--- a/css/base.css
+++ b/css/base.css
@@ -1,24 +1,25 @@
-li{
-    padding: 0;
-    margin: 0;
-    list-style: none;
+li {
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
 
-h1, h2, h3, h4, h5, h6, p{
-    margin: 0;
+h1, h2, h3, h4, h5, h6, p {
+  margin: 0;
 }
 
-a{
-    text-decoration: none;
-    color: black;
+a {
+  text-decoration: none;
+  color: black;
 }
 
-img{
-    margin: 0;
-    width: 100%;
-    height: auto;
+img {
+  margin: 0;
+  width: 100%;
+  height: auto;
 }
- ul{
-    margin: 0;
-    padding: 0;
-}
+
+ul {
+  margin: 0;
+  padding: 0;
+}/*# sourceMappingURL=base.css.map */
