--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,29 @@
+li {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+img {
+  margin: 0;
+  width: 100%;
+  height: auto;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background-color: #f5f5f5;
 }
@@ -14,11 +40,15 @@ body {
   margin: -1px;
   border: 0;
   padding: 0;
-
   white-space: nowrap;
-  clip-path: inset(100%);
+  -webkit-clip-path: inset(100%);
+          clip-path: inset(100%);
   clip: rect(0, 0, 0, 0);
   overflow: hidden;
+}
+
+.accent-border {
+  border-bottom: 1px solid #007825;
 }
 
 .conteiner {
@@ -30,6 +60,18 @@ body {
   margin-right: auto;
 }
 
+.main-button {
+  display: block;
+  margin: auto;
+  width: 272px;
+  height: 52px;
+  border: 2px solid #087313;
+  border-radius: 60px;
+  background-color: #f5f5f5;
+  font-size: 24px;
+  font-weight: 400;
+}
+
 .header {
   z-index: 1;
   position: fixed;
@@ -37,7 +79,6 @@ body {
   height: 130px;
   top: 0;
   left: 0;
-
   background-color: #fff;
 }
 
@@ -50,6 +91,7 @@ body {
   padding-top: 16px;
   padding-bottom: 16px;
 }
+
 .logo-img {
   width: 294px;
   height: 93px;
@@ -75,221 +117,15 @@ body {
   margin-right: 37px;
 }
 
-/* .hero{
-    padding-top: 130px;
-    background-color: #fff;
-}
-
-.hero-conteiner{
-    position: relative;
-    display: flex;
-}
-
-.main-title{
-    display: block;
-    margin-top: 270px;
-    margin-bottom: 204px;
-    
-    font-size: 64px;
-    font-weight: 900;
-}
-
-.hero-contents{
-    position: absolute;
-    right: 0;
-    top: 0;
-}
-
-.contents-text{
-    margin-top: 19px;
-    width: 764px;
-    font-size: 14px;
-    font-weight: 400;
-}
-
-.hero-img{
-    width: 764px;
-    height: 721px;
-} */
-
-.hero {
-  padding-top: 130px;
-  background-color: #fff;
-}
-
-.hero-conteiner {
-  position: relative;
-  /* display: flex; */
-  display: grid;
-  /* grid-template-columns: 50% 50%; */
-  /* grid-template-rows: 25% 25% 25% 25%; */
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(4, 1fr);
-  /* grid-template-rows: [row1-start] 25% [row1-end] 25% [third-line] 25% [last-line]25%; */
-}
-
-.main-title {
-  display: block;
-  /* margin-top: 270px;
-    margin-bottom: 204px; */
-  /* grid-column-start: 1; */
-  /* grid-column-end: 2; */
-  /* grid-row-start: 2; */
-  /* grid-row-end: 3; */
-  grid-area: 2/1/3/2;
-
-  align-self: center;
-
-  font-size: 64px;
-  font-weight: 900;
-}
-
-.hero-contents {
-  position: absolute;
-  /* right: 0; */
-  /* top: 0; */
-
-  /* grid-column-start: 2; */
-  /* grid-column-end: 2; */
-  /* grid-row-start: 1; */
-  /* grid-row-end: 5; */
-
-  grid-area: 1/2/5/3;
-
-  margin-right: -40px;
-}
-
-.contents-text {
-  margin-top: 19px;
-  /* width: 764px; */
-  font-size: 14px;
-  font-weight: 400;
-}
-
-.housing {
-  /* padding-top: 58px;
-    padding-bottom: 122px; */
-  /* grid-column-start: 1;
-  grid-column-end: 2;
-  grid-row-start: 4;
-  grid-row-end: 5;
-
-  grid-area: 4/1/5/2;
-
-  align-self: center; */
-  padding-top: 20px;
-}
-
-.housing-list {
-  display: flex;
-
-  font-size: 16px;
-  font-weight: 300;
-}
-
-.housing-item:not(:last-child) {
-  margin-right: 113px;
-}
-
-.housing-amount {
-  display: block;
-
-  font-size: 96px;
-}
-
-.projects-conteiner {
-  padding-top: 122px;
-}
-.projects-list {
-  padding-bottom: 48px;
-}
-
-.project-item {
-  width: 384.33px;
-  margin-top: 31px;
-}
-
-.projects-img {
-  /* width: 384.33px; */
-  /* height: 319.79px; */
-  border-radius: 3%;
-}
-
-.project-title {
-  margin-top: 4px;
-  font-size: 20px;
-  margin-bottom: 3px;
-  font-weight: 400;
-  /* width: 384.33px; */
-  text-align: center;
-}
-
-.project-date {
-  font-size: 16px;
-  font-weight: 400;
-  width: 384.33px;
-  text-align: center;
-}
-
-.main-button {
-  display: block;
-  margin: auto;
-  width: 272px;
-  height: 52px;
-
-  border: 2px solid #087313;
-  border-radius: 60px;
-  background-color: #f5f5f5;
-
-  font-size: 24px;
-  font-weight: 400;
-}
-
-.news-conteiner {
-  padding-bottom: 119.5px;
-
-  
-}
-
-.news-list {
-  padding-top: 41px;
-  padding-bottom: 48px;
-}
-
-.news-item {
-  width: 384.33px;
-}
-
-.news-date {
-  margin-top: 16px;
-
-  font-size: 14px;
-  font-weight: 400;
-}
-
-.news-title {
-  margin-top: 4px;
-  font-size: 20px;
-  font-weight: 400;
-}
-
-.news-text {
-  margin-top: 8px;
-  font-size: 14px;
-  font-weight: 400;
-}
-
 .footer-conteiner {
   padding-top: 21.5px;
   padding-bottom: 114px;
-
   border-top: 1px solid #000000;
 }
 
 .contacts-list {
   margin-top: 52px;
   padding-bottom: 33px;
-
   border-bottom: 1px solid rgba(0, 0, 0, 0.3);
 }
 
@@ -301,7 +137,6 @@ body {
 
 .contacts-kind {
   margin-bottom: 8px;
-
   font-size: 20px;
   font-weight: 400;
 }
@@ -329,11 +164,167 @@ body {
   margin-right: 24px;
 }
 
-/**/
+.hero {
+  padding-top: 130px;
+  background-color: #fff;
+}
+
+.hero-conteiner {
+  position: relative;
+  /* display: flex; */
+  display: grid;
+  /* grid-template-columns: 50% 50%; */
+  /* grid-template-rows: 25% 25% 25% 25%; */
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  /* grid-template-rows: [row1-start] 25% [row1-end] 25% [third-line] 25% [last-line]25%; */
+}
+
+.main-title {
+  display: block;
+  /* margin-top: 270px;
+    margin-bottom: 204px; */
+  /* grid-column-start: 1; */
+  /* grid-column-end: 2; */
+  /* grid-row-start: 2; */
+  /* grid-row-end: 3; */
+  grid-area: 2/1/3/2;
+  align-self: center;
+  font-size: 64px;
+  font-weight: 900;
+}
+
+.hero-contents {
+  position: absolute;
+  /* right: 0; */
+  /* top: 0; */
+  /* grid-column-start: 2; */
+  /* grid-column-end: 2; */
+  /* grid-row-start: 1; */
+  /* grid-row-end: 5; */
+  grid-area: 1/2/5/3;
+  margin-right: -40px;
+}
+
+.contents-text {
+  margin-top: 19px;
+  /* width: 764px; */
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.housing {
+  /* padding-top: 58px;
+    padding-bottom: 122px; */
+  /* grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 4;
+  grid-row-end: 5;
+
+  grid-area: 4/1/5/2;
+
+  align-self: center; */
+  padding-top: 20px;
+}
+
+.housing-list {
+  display: flex;
+  font-size: 16px;
+  font-weight: 300;
+}
+
+.housing-item:not(:last-child) {
+  margin-right: 113px;
+}
+
+.housing-amount {
+  display: block;
+  font-size: 96px;
+}
+
+.projects-conteiner {
+  padding-top: 122px;
+  padding-bottom: 48px;
+}
+
+.projects-list {
+  padding-top: 41px;
+  padding-bottom: 48px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  -moz-column-gap: 24px;
+       column-gap: 24px;
+  row-gap: 24px;
+}
+
+.project-item {
+  width: 384.33px;
+  justify-self: center;
+}
+
+.projects-img {
+  /* width: 384.33px; */
+  /* height: 319.79px; */
+  border-radius: 3%;
+}
+
+.project-title {
+  margin-top: 4px;
+  font-size: 20px;
+  margin-bottom: 3px;
+  font-weight: 400;
+  /* width: 384.33px; */
+  text-align: center;
+}
+
+.project-date {
+  font-size: 16px;
+  font-weight: 400;
+  width: 384.33px;
+  text-align: center;
+}
+
+.news-conteiner {
+  padding-bottom: 119.5px;
+}
+
+.news-list {
+  padding-top: 41px;
+  padding-bottom: 48px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  -moz-column-gap: 24px;
+       column-gap: 24px;
+  row-gap: 24px;
+}
+
+.news-item {
+  width: 384.33px;
+  justify-self: center;
+}
+
+.news-date {
+  margin-top: 16px;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.news-title {
+  margin-top: 4px;
+  font-size: 20px;
+  font-weight: 400;
+}
+
+.news-text {
+  margin-top: 8px;
+  font-size: 14px;
+  font-weight: 400;
+}
 
 .button-list {
   display: flex;
-
   margin-top: 47px;
   margin-bottom: 31px;
   justify-content: center;
@@ -348,24 +339,20 @@ body {
   font-size: 20px;
   font-weight: 400;
   /* border-radius: 40%; */
-
   display: block;
   height: 48px;
-
   border: 1px solid rgba(0, 0, 0, 0.49);
   border-radius: 60px;
   background-color: #f5f5f5;
-
   font-size: 20px;
   font-weight: 400;
 }
- /**/
 
- .news{
-   padding-top: 130px; 
- }p
+.news {
+  padding-top: 130px;
+}
 
- .page-title{
-    background-color: #fff;
-    padding-top: 130px;
- }
+.page-title {
+  background-color: #fff;
+  padding-top: 130px;
+}/*# sourceMappingURL=main.css.map */
