--- a/sass/body.scss
+++ b/sass/body.scss
@@ -22,5 +22,9 @@ body {
   }
 
   .accent-border{
-    border-bottom: 1px solid #007825
+    border-bottom: 2px solid #007825
+  }
+
+  .switch-border{
+    
   }
