--- a/sass/body.scss
+++ b/sass/body.scss
@@ -1,5 +1,5 @@
 body {
-    background-color: #f5f5f5;
+    background-color: #faeee5;
   }
 
   .second-title {
@@ -26,5 +26,6 @@ body {
   }
 
   .switch-border{
-    
+    border: 2px solid #000000;
+    border-radius: 60px;
   }
