--- a/sass/main.scss
+++ b/sass/main.scss
@@ -20,4 +20,5 @@
 @import "./newsPage/newsConteiner.scss";
 
 // projects-page
-@import "./projectsPage/projectsConteiner.scss"
+@import "./projectsPage/projectsConteiner.scss";
+@import "./projectsPage/projectsCard.scss";
