--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ ul {
 }
 
 body {
-  background-color: #f5f5f5;
+  background-color: #faeee5;
 }
 
 .second-title {
@@ -48,7 +48,12 @@ body {
 }
 
 .accent-border {
-  border-bottom: 1px solid #007825;
+  border-bottom: 2px solid #007825;
+}
+
+.switch-border {
+  border: 2px solid #000000;
+  border-radius: 60px;
 }
 
 .conteiner {
@@ -67,7 +72,7 @@ body {
   height: 52px;
   border: 2px solid #087313;
   border-radius: 60px;
-  background-color: #f5f5f5;
+  background-color: inherit;
   font-size: 24px;
   font-weight: 400;
 }
@@ -334,7 +339,7 @@ body {
   margin-right: 5px;
 }
 
-.button-item button {
+.switch-button {
   padding: 12px 24px;
   font-size: 20px;
   font-weight: 400;
@@ -351,4 +356,117 @@ body {
 .page-title {
   background-color: #fff;
   padding-top: 130px;
+}
+
+.options-conteiner {
+  background-color: #fff;
+}
+
+.carousel {
+  padding-top: 130px;
+}
+
+.options {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  margin-top: 23px;
+  row-gap: 20px;
+}
+
+.price {
+  font-size: 24px;
+}
+
+.options-paragraph {
+  margin-bottom: 46px;
+  grid-area: 2/2/4/2;
+  font-size: 32px;
+}
+
+.options-list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-area: 3/1/3/3;
+  -moz-column-gap: 60px;
+       column-gap: 60px;
+  row-gap: 60px;
+  padding: 26px 29px;
+  background-color: #FED6B8;
+  border-radius: 20px;
+  position: absolute;
+  width: 100%;
+  top: -11%;
+  right: -2%;
+}
+
+.table-items {
+  align-self: center;
+}
+
+.description {
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  padding-top: 150px;
+  padding-bottom: 80px;
+}
+
+.description-block {
+  grid-area: 1/2/2/3;
+}
+
+.description-title {
+  margin-bottom: 29px;
+  font-size: 36px;
+  font-weight: 900;
+}
+
+.description-text {
+  margin-bottom: 29px;
+  font-size: 20px;
+  font-weight: 400;
+}
+
+.description-button {
+  display: block;
+  margin: auto;
+  width: 100%;
+  padding: 12px;
+  border: 2px solid #087313;
+  border-radius: 60px;
+  background-color: inherit;
+  font-size: 24px;
+  font-weight: 400;
+}
+
+.buttons-item:not(:last-child) {
+  margin-bottom: 8px;
+}
+
+.project-contact {
+  padding: 24px;
+  margin-top: 53px;
+  background-color: #FED6B8;
+  border-radius: 12px;
+  font-size: 16px;
+  font-weight: 400;
+  text-align: center;
+}
+
+.contacts-title {
+  margin-bottom: 29px;
+  font-size: 36px;
+  font-weight: 900;
+}
+
+.contact-name {
+  margin-bottom: 16px;
+  font-size: 20px;
+  font-weight: 400;
+}
+
+.contacts-item {
+  margin-bottom: 8px;
 }/*# sourceMappingURL=main.css.map */
