--- a/css/mainButton.css
+++ b/css/mainButton.css
@@ -5,7 +5,7 @@
   height: 52px;
   border: 2px solid #087313;
   border-radius: 60px;
-  background-color: #f5f5f5;
+  background-color: inherit;
   font-size: 24px;
   font-weight: 400;
 }/*# sourceMappingURL=mainButton.css.map */
