--- a/sass/mainButton.scss
+++ b/sass/mainButton.scss
@@ -6,7 +6,7 @@
   
     border: 2px solid #087313;
     border-radius: 60px;
-    background-color: #f5f5f5;
+    background-color: inherit;
   
     font-size: 24px;
     font-weight: 400;
