--- a/sass/newsPage/buttonList.scss
+++ b/sass/newsPage/buttonList.scss
@@ -10,7 +10,7 @@
     margin-right: 5px;
   }
   
-  .button-item button {
+.switch-button {
     padding: 12px 24px;
     font-size: 20px;
     font-weight: 400;
