--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,4 +21,5 @@
 
 // projects-page
 @import "./projectsPage/projectsConteiner.scss";
+@import "./projectsPage/carousel.scss";
 @import "./projectsPage/projectsCard.scss";
