--- a/css/buttonList.css
+++ b/css/buttonList.css
@@ -18,7 +18,7 @@
   height: 48px;
   border: 1px solid rgba(0, 0, 0, 0.49);
   border-radius: 60px;
-  background-color: #f5f5f5;
+  background-color: inherit;
   font-size: 20px;
   font-weight: 400;
 }/*# sourceMappingURL=buttonList.css.map */
