--- a/sass/newsPage/buttonList.scss
+++ b/sass/newsPage/buttonList.scss
@@ -21,7 +21,7 @@
   
     border: 1px solid rgba(0, 0, 0, 0.49);
     border-radius: 60px;
-    background-color: #f5f5f5;
+    background-color: inherit;
   
     font-size: 20px;
     font-weight: 400;
