--- a/sass/main.scss
+++ b/sass/main.scss
@@ -23,3 +23,8 @@
 @import "./projectsPage/projectsConteiner.scss";
 @import "./projectsPage/carousel.scss";
 @import "./projectsPage/projectsCard.scss";
+@import "./projectsPage/backdrop.scss";
+
+// contacts-page
+
+@import "./contacts/contacts.scss"
