--- a/css/main.css
+++ b/css/main.css
@@ -402,6 +402,7 @@ article img {
   transform-border-radius: 50%;
   transform-background: #fff;
   transform-opacity: 0.5;
+  transform-cursor: pointer;
 }
 .slider-prev-next-control label:hover {
   opacity: 1;
@@ -426,9 +427,9 @@ article img {
 
 /*---- SET POSITION FOR SLIDE ----*/
 #slide1:checked ~ .slider-prev-next-control label:nth-child(3)::after, #slide3:checked ~ .slider-prev-next-control label:nth-child(2)::after, #slide2:checked ~ .slider-prev-next-control label:nth-child(1)::after, #slide3:checked ~ .slider-prev-next-control label:nth-child(1)::after, #slide2:checked ~ .slider-prev-next-control label:nth-child(3)::after, #slide1:checked ~ .slider-prev-next-control label:nth-child(2)::after {
-  font-family: FontAwesome;
+  font-family: "Font Awesome 5 Free";
   font-style: normal;
-  font-weight: normal;
+  font-weight: 900;
   text-decoration: inherit;
   margin: 0;
   line-height: 38px;
@@ -439,7 +440,7 @@ article img {
 }
 
 #slide3:checked ~ .slider-prev-next-control label:nth-child(1)::after, #slide2:checked ~ .slider-prev-next-control label:nth-child(3)::after, #slide1:checked ~ .slider-prev-next-control label:nth-child(2)::after {
-  content: "\f105";
+  content: "";
 }
 
 #slide3:checked ~ .slider-prev-next-control label:nth-child(1), #slide2:checked ~ .slider-prev-next-control label:nth-child(3), #slide1:checked ~ .slider-prev-next-control label:nth-child(2) {
@@ -453,7 +454,7 @@ article img {
 }
 
 #slide1:checked ~ .slider-prev-next-control label:nth-child(3)::after, #slide3:checked ~ .slider-prev-next-control label:nth-child(2)::after, #slide2:checked ~ .slider-prev-next-control label:nth-child(1)::after {
-  content: "\f104";
+  content: "";
 }
 
 #slide3:checked ~ .slider-wrapper article:nth-child(3) .info, #slide2:checked ~ .slider-wrapper article:nth-child(2) .info, #slide1:checked ~ .slider-wrapper article:nth-child(1) .info {
@@ -596,4 +597,36 @@ article img {
 
 .contacts-item {
   margin-bottom: 8px;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  background-color: rgba(0, 0, 0, 0.9);
+  opacity: 0;
+  pointer-events: none;
+}
+
+.close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 130px;
+  height: 130px;
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 50%;
+  border: none;
+}
+
+.close-svg {
+  width: 33.82px;
+  height: 32px;
+}
+
+.persons-item {
+  width: 270px;
 }/*# sourceMappingURL=main.css.map */
