--- a/sass/projectsPage/carousel.scss
+++ b/sass/projectsPage/carousel.scss
@@ -1,415 +1,193 @@
-// .carousel{
-//     margin-bottom: 25px;
-// }
+.carousel{
+margin-bottom: 25px;
+}
 
 
 
-// /*---- NUMBER OF SLIDE CONFIGURATION ----*/
-// $num-of-slide: 3;
+/*---- NUMBER OF SLIDE CONFIGURATION ----*/
+$num-of-slide: 3;
 
-// .wrapper {
-//     // max-width: 60em;
-//     // margin: 1em auto;
-//     position: relative;
+.wrapper {
+position: relative;
     
-// }
+}
 
-// input {
-//     display: none;
-// }
+input {
+     display: none;
+ }
 
-// .inner {
-//     width: percentage($num-of-slide);
-//     line-height: 0;
-// }
+ .inner {
+    width: percentage($num-of-slide);
+     line-height: 0;
+ }
 
-// article {
-//     width: percentage(1/$num-of-slide);
-//     float: left;
-//     position: relative;
+ article {
+     width: percentage(1/$num-of-slide);
+     float: left;
+     position: relative;
 
-//     img {
-//         width: 100%;
-//     }
-// }
+     img {
+         width: 100%;
+     }
+ }
 
-// /*---- SET UP CONTROL ----*/
-// .slider-prev-next-control {
-//     height: 50px;
-//     position: absolute;
-//     top: 50%;
-//     width: 100%;
-//     transform: translateY(-50%)
+ /*---- SET UP CONTROL ----*/
+ .slider-prev-next-control {
+     height: 50px;
+     position: absolute;
+     top: 50%;
+     width: 100%;
+     transform: translateY(-50%)
 
-//     label {
-//         display: none;
-//         width: 40px;
-//         height: 40px;
-//         border-radius: 50%;
-//         background: #fff;
-//         opacity: 0.5;
-//     }
+     label {
+        display: none;
+         width: 40px;
+         height: 40px;
+         border-radius: 50%;
+         background: #fff;
+         opacity: 0.5;
+         cursor: pointer;
+     }
 
-//     label:hover {
-//         opacity: 1;
-//     }
-// }
+     label:hover {
+         opacity: 1;
+     }
+ }
 
-// /* Slider Styling */
-// .slider-wrapper {
-//     width: 100%;
-//     overflow: hidden;
-//     border-radius: 5px;
-//     box-shadow: 1px 1px 4px #666;
-//     background: #fff;
-//     background: #fcfff4;
-//     transform: translateZ(0);
-//     transition: all 500ms ease-out
+ /* Slider Styling */
+ .slider-wrapper {
+     width: 100%;
+     overflow: hidden;
+     border-radius: 5px;
+     box-shadow: 1px 1px 4px #666;
+     background: #fff;
+     background: #fcfff4;
+     transform: translateZ(0);
+     transition: all 500ms ease-out
 
     
-// }
+ }
 
-// .inner {
-//     transform: translateZ(0);
-// transition: all 800ms cubic-bezier(0.77, 0, 0.175, 1)
+ .inner {
+     transform: translateZ(0);
+ transition: all 800ms cubic-bezier(0.77, 0, 0.175, 1)
 
-// }
+ }
 
-// /*---- SET POSITION FOR SLIDE ----*/
-// %bind-prev-next-button {
-//     font-family: FontAwesome;
-//     font-style: normal;
-//     font-weight: normal;
-//     text-decoration: inherit;
-//     margin: 0;
-//     line-height: 38px;
-//     font-size: 3em;
-//     display: block;
-//     color: #007B25;
-//     border-radius: 50%
-// }
+ /*---- SET POSITION FOR SLIDE ----*/
+ %bind-prev-next-button {
+     font-family: "Font Awesome 5 Free";
+     font-style: normal;
+     font-weight: 900;
+     text-decoration: inherit;
+     margin: 0;
+     line-height: 38px;
+     font-size: 3em;
+    display: block;
+     color: #007B25;
+     border-radius: 50%
+ }
 
-// %bind-next-button {
-//     @extend %bind-prev-next-button;
-//     content: "\f105";
-//     // padding-left: 15px;
-// }
+ %bind-next-button {
+     @extend %bind-prev-next-button;
+     content: "";
+     // padding-left: 15px;
+ }
 
-// %bind-next-label {
-//     display: block;
-//     float: right;
-//     // margin-right: 5px;
-// }
+ %bind-next-label {
+     display: block;
+     float: right;
+     // margin-right: 5px;
+ }
 
-// %bind-prev-label {
-//     display: block;
-//     float: left;
-//     // margin-left: 5px;
-// }
+ %bind-prev-label {
+     display: block;
+     float: left;
+     // margin-left: 5px;
+ }
 
-// %bind-prev-button {
-//     @extend %bind-prev-next-button;
-//     content: "\f104";
-//     // padding-left: 8px;
-// }
+ %bind-prev-button {
+     @extend %bind-prev-next-button;
+     content: "";
+     // padding-left: 8px;
+ }
 
-// %bind-background-active-dot {
-//     background: #333;
-// }
+ %bind-background-active-dot {
+     background: #333;
+ }
 
-// %bind-opacity-info {
-//     opacity: 1;
-// }
+ %bind-opacity-info {
+     opacity: 1;
+ }
 
-// @for $i from 1 through $num-of-slide {
-//     #slide#{$i}:checked {
-//         & ~ .slider-wrapper .inner {
-//             margin-left: percentage(1 - $i);
-//         }
+ @for $i from 1 through $num-of-slide {
+     #slide#{$i}:checked {
+         & ~ .slider-wrapper .inner {
+             margin-left: percentage(1 - $i);
+         }
 
-//         & ~ .slider-wrapper article:nth-child(#{$i}) .info {
-//             @extend %bind-opacity-info;
-//         }
-//     }
-// }
+         & ~ .slider-wrapper article:nth-child(#{$i}) .info {
+             @extend %bind-opacity-info;
+         }
+     }
+ }
 
-// @for $i from 1 through ($num-of-slide - 1) {
-//     #slide#{$i}:checked {
-//         & ~ .slider-prev-next-control label:nth-child(#{$i +1}) {
-//             @extend %bind-next-label;
+ @for $i from 1 through ($num-of-slide - 1) {
+     #slide#{$i}:checked {
+         & ~ .slider-prev-next-control label:nth-child(#{$i +1}) {
+             @extend %bind-next-label;
 
-//             &::after {
-//                 @extend %bind-next-button;
-//             }
-//         }
-//     }
-// }
+             &::after {
+                 @extend %bind-next-button;
+             }
+         }
+     }
+ }
 
-// #slide#{$num-of-slide}:checked ~ .slider-prev-next-control label:nth-child(1) {
-//     @extend %bind-next-label;
+ #slide#{$num-of-slide}:checked ~ .slider-prev-next-control label:nth-child(1) {
+     @extend %bind-next-label;
 
-//     &::after {
-//         @extend %bind-next-button;
-//     }
-// }
+     &::after {
+         @extend %bind-next-button;
+     }
+ }
 
-// @for $i from 2 through $num-of-slide {
-//     #slide#{$i}:checked {
-//         & ~ .slider-prev-next-control label:nth-child(#{$i - 1}) {
-//             @extend %bind-prev-label;
+ @for $i from 2 through $num-of-slide {
+     #slide#{$i}:checked {
+         & ~ .slider-prev-next-control label:nth-child(#{$i - 1}) {
+             @extend %bind-prev-label;
 
-//             &::after {
-//                 @extend %bind-prev-button;
-//             }
-//         }
-//     }
-// }
+             &::after {
+                 @extend %bind-prev-button;
+             }
+         }
+     }
+ }
 
-// #slide#{1}:checked ~ .slider-prev-next-control label:nth-child(#{$num-of-slide}) {
-//     @extend %bind-prev-label;
+ #slide#{1}:checked ~ .slider-prev-next-control label:nth-child(#{$num-of-slide}) {
+     @extend %bind-prev-label;
 
-//     &::after {
-//         @extend %bind-prev-button;
-//     }
-// }
+     &::after {
+         @extend %bind-prev-button;
+     }
+ }
 
-// /*---- TABLET ----*/
-// @media only screen and (max-width: 850px) and (min-width: 450px) {
-//     .slider-wrapper {
-//         border-radius: 0;
-//     }
-// }
+ /*---- TABLET ----*/
+ @media only screen and (max-width: 850px) and (min-width: 450px) {
+     .slider-wrapper {
+         border-radius: 0;
+     }
+ }
 
-// /*---- MOBILE----*/
-// @media only screen and (max-width: 450px) {
-//     .slider-wrapper {
-//         border-radius: 0;
-//     }
+ /*---- MOBILE----*/
+ @media only screen and (max-width: 450px) {
+     .slider-wrapper {
+         border-radius: 0;
+     }
 
-//     .slider-wrapper .info {
-//         opacity: 0;
-//     }
-// }
+     .slider-wrapper .info {
+         opacity: 0;
+     }
+ }
 
 
-/**
- * Carousel.sass
- * @author: Dang Van Thanh
- * @github: https://github.com/dangvanthanh/carousel.sass
- * @description: A Simple Carousel Pure CSS Using Sass
- * @version: 1.0.0
- */
- %animation-default {
-    opacity: 1 !important;
-    z-index: 3;
-  }
-  
-  @mixin carousel($items, $animation: 'default') {
-    .carousel {
-      width: 100%;
-      position: relative;
-      overflow: hidden;
-  
-      > input[type="radio"] {
-        position: absolute;
-        left: 0;
-        opacity: 0;
-        top: 0;
-  
-        &:checked {
-          ~ .carousel__items .carousel__item,
-          ~ .carousel__prev > label,
-          ~ .carousel__next > label {
-            opacity: 0;
-          }
-        }
-  
-        @for $i from 1 through $items {
-          &:nth-child(#{$i}) {
-            &:checked {
-              ~ .carousel__items .carousel__item {
-                @if $animation == 'default' {
-                  &:nth-child(#{$i}) {
-                    opacity: 1;
-                  }
-                }
-              }
-  
-              ~ .carousel__prev {
-                > label {
-                  @if $i == 1 {
-                    &:nth-child(#{$items}) {
-                      @extend %animation-default;
-                    }
-                  } @else if $i == $items {
-                    &:nth-child(#{$items - 1}) {
-                      @extend %animation-default;
-                    }
-                  } @else {
-                    &:nth-child(#{$i - 1}) {
-                      @extend %animation-default;
-                    }
-                  }
-                }
-              }
-  
-              ~ .carousel__next {
-                > label {
-                  @if $i == $items {
-                    &:nth-child(1) {
-                      @extend %animation-default;
-                    }
-                  } @else {
-                    &:nth-child(#{$i + 1}) {
-                      @extend %animation-default;
-                    }
-                  }
-                }
-              }
-  
-              ~ .carousel__nav {
-                > label {
-                  &:nth-child(#{$i}) {
-                    background: #ccc;
-                    cursor: default;
-                    pointer-events: none;
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-  
-      &__items {
-        margin: 0;
-        padding: 0;
-        list-style-type: none;
-        width: 100%;
-        height: 600px;
-        position: relative;
-      }
-  
-      &__item {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: 1;
-        transition: opacity 2s;
-        -webkit-transition: opacity 2s;
-  
-        img {
-          width: 100%;
-          vertical-align: middle;
-        }
-      }
-  
-      &__prev,
-      &__next {
-        > label {
-          border: 1px solid #fff;
-          border-radius: 50%;
-          cursor: pointer;
-          display: block;
-          width: 40px;
-          height: 40px;
-          position: absolute;
-          top: 50%;
-          transform: translateY(-50%);
-          -webkit-transform: translateY(-50%);
-          transition: all .3s ease;
-          -webkit-transition: all .3s ease;
-          opacity: 0;
-          z-index: 2;
-  
-          &:hover,
-          &:focus {
-            opacity: .5 !important;
-          }
-  
-          &:before,
-          &:after {
-            content: "";
-            position: absolute;
-            width: inherit;
-            height: inherit;
-          }
-  
-          &:before {
-            background: linear-gradient(to top, #fff 0%, #fff 10%, rgba(51, 51, 51, 0) 10%),
-                        linear-gradient(to left, #fff 0%, #fff 10%, rgba(51, 51, 51, 0) 10%);
-            width: 60%;
-            height: 60%;
-            top: 20%;
-          }
-        }
-      }
-  
-      &__prev {
-        > label {
-          left: 2%;
-  
-          &:before {
-            left: 35%;
-            top: 20%;
-            transform: rotate(135deg);
-            -webkit-transform: rotate(135deg);
-          }
-        }
-      }
-  
-      &__next {
-        > label {
-          right: 2%;
-  
-          &:before {
-            left: 10%;
-            transform: rotate(315deg);
-            -webkit-transform: rotate(315deg);
-          }
-        }
-      }
-  
-      &__nav {
-        position: absolute;
-        bottom: 3%;
-        left: 0;
-        text-align: center;
-        width: 100%;
-        z-index: 3;
-  
-        > label {
-          border: 1px solid #fff;
-          display: inline-block;
-          border-radius: 50%;
-          cursor: pointer;
-          margin: 0 .125%;
-          width: 20px;
-          height: 20px;
-        }
-      }
-    }
-  }
-  
-  *,
-  *:before,
-  *:after {
-    box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-  }
-  
-  body {
-    background: #fcfcfc;
-    margin: 0;
-  }
-  
-  .container {
-    width: 900px;
-    min-width: 900px;
-    margin: 50px auto;
-  }
-  
-  @include carousel(5);
