--- a/sass/projectsPage/carousel.scss
+++ b/sass/projectsPage/carousel.scss
@@ -1,193 +1,78 @@
-.carousel{
-margin-bottom: 25px;
-}
-
-
-
-/*---- NUMBER OF SLIDE CONFIGURATION ----*/
-$num-of-slide: 3;
-
-.wrapper {
-position: relative;
-    
-}
-
-input {
-     display: none;
- }
-
- .inner {
-    width: percentage($num-of-slide);
-     line-height: 0;
- }
-
- article {
-     width: percentage(1/$num-of-slide);
-     float: left;
-     position: relative;
-
-     img {
-         width: 100%;
-     }
- }
-
- /*---- SET UP CONTROL ----*/
- .slider-prev-next-control {
-     height: 50px;
-     position: absolute;
-     top: 50%;
-     width: 100%;
-     transform: translateY(-50%)
-
-     label {
-        display: none;
-         width: 40px;
-         height: 40px;
-         border-radius: 50%;
-         background: #fff;
-         opacity: 0.5;
-         cursor: pointer;
-     }
-
-     label:hover {
-         opacity: 1;
-     }
- }
-
- /* Slider Styling */
- .slider-wrapper {
-     width: 100%;
-     overflow: hidden;
-     border-radius: 5px;
-     box-shadow: 1px 1px 4px #666;
-     background: #fff;
-     background: #fcfff4;
-     transform: translateZ(0);
-     transition: all 500ms ease-out
-
-    
- }
-
- .inner {
-     transform: translateZ(0);
- transition: all 800ms cubic-bezier(0.77, 0, 0.175, 1)
-
- }
-
- /*---- SET POSITION FOR SLIDE ----*/
- %bind-prev-next-button {
-     font-family: "Font Awesome 5 Free";
-     font-style: normal;
-     font-weight: 900;
-     text-decoration: inherit;
-     margin: 0;
-     line-height: 38px;
-     font-size: 3em;
-    display: block;
-     color: #007B25;
-     border-radius: 50%
- }
-
- %bind-next-button {
-     @extend %bind-prev-next-button;
-     content: "";
-     // padding-left: 15px;
- }
-
- %bind-next-label {
-     display: block;
-     float: right;
-     // margin-right: 5px;
- }
-
- %bind-prev-label {
-     display: block;
-     float: left;
-     // margin-left: 5px;
- }
-
- %bind-prev-button {
-     @extend %bind-prev-next-button;
-     content: "";
-     // padding-left: 8px;
- }
-
- %bind-background-active-dot {
-     background: #333;
- }
-
- %bind-opacity-info {
-     opacity: 1;
- }
-
- @for $i from 1 through $num-of-slide {
-     #slide#{$i}:checked {
-         & ~ .slider-wrapper .inner {
-             margin-left: percentage(1 - $i);
-         }
-
-         & ~ .slider-wrapper article:nth-child(#{$i}) .info {
-             @extend %bind-opacity-info;
-         }
-     }
- }
-
- @for $i from 1 through ($num-of-slide - 1) {
-     #slide#{$i}:checked {
-         & ~ .slider-prev-next-control label:nth-child(#{$i +1}) {
-             @extend %bind-next-label;
-
-             &::after {
-                 @extend %bind-next-button;
-             }
-         }
-     }
- }
-
- #slide#{$num-of-slide}:checked ~ .slider-prev-next-control label:nth-child(1) {
-     @extend %bind-next-label;
-
-     &::after {
-         @extend %bind-next-button;
-     }
- }
-
- @for $i from 2 through $num-of-slide {
-     #slide#{$i}:checked {
-         & ~ .slider-prev-next-control label:nth-child(#{$i - 1}) {
-             @extend %bind-prev-label;
-
-             &::after {
-                 @extend %bind-prev-button;
-             }
-         }
-     }
- }
-
- #slide#{1}:checked ~ .slider-prev-next-control label:nth-child(#{$num-of-slide}) {
-     @extend %bind-prev-label;
-
-     &::after {
-         @extend %bind-prev-button;
-     }
- }
-
- /*---- TABLET ----*/
- @media only screen and (max-width: 850px) and (min-width: 450px) {
-     .slider-wrapper {
-         border-radius: 0;
-     }
- }
-
- /*---- MOBILE----*/
- @media only screen and (max-width: 450px) {
-     .slider-wrapper {
-         border-radius: 0;
-     }
-
-     .slider-wrapper .info {
-         opacity: 0;
-     }
- }
-
-
+#slider-wrapper {
+      display: block;
+      min-height: 100px;
+      margin: auto;
+      position: relative;
+  }
+  #slider {
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      position: relative;
+      border-radius: 3px;
+  }
+  #slider>ul {
+      list-style: none;
+      height: 100%;
+      width: 500%;
+      overflow: hidden;
+      position: relative;
+      left: 0px;
+      -webkit-transition: left .5s;
+      -moz-transition: left .5s;
+      -o-transition: left .5s;
+      transition: left .5s;
+  }
+  #slider>ul>li {
+      width: 20%;
+      float: left;
+      position: relative;
+  }
+  #slider>ul>li p {
+      padding: 10px;
+  }
+  
+  #slider>ul>li>img {
+      margin: auto;
+      width: 100%;
+  }
+  #slider-wrapper input[type=radio] {
+      position: absolute;
+      left: 50%;
+      bottom: 15px;
+      z-index: 100;
+      visibility: hidden;
+  }
+  #slider-wrapper label {
+      position: absolute;
+      left: 50%;
+      bottom: 30px;
+      z-index: 100;
+      width: 15px;
+      height: 15px;
+      background: #222;
+      cursor: pointer;
+      -webkit-transition: background-color .5s;
+      -moz-transition: background-color .5s;
+      -o-transition: background-color .5s;
+      transition: background-color .5s;
+      border-radius: 50px;
+      border: 1px solid #6b6969;
+  }
+  
+  #slider-wrapper #button-1:checked~label[for=button-1] { background: rgba($color: #fff, $alpha: 0.1); }
+  #slider-wrapper #button-2:checked~label[for=button-2] { background: #888; }
+  #slider-wrapper #button-3:checked~label[for=button-3] { background: #888; }
+  #slider-wrapper #button-4:checked~label[for=button-4] { background: #888; }
+  #slider-wrapper #button-5:checked~label[for=button-5] { background: #888; }
+  
+  #slider-wrapper label[for=button-1] { margin-left: -40px }
+  #slider-wrapper label[for=button-2] { margin-left: -20px }
+  #slider-wrapper label[for=button-4] { margin-left: 20px }
+  #slider-wrapper label[for=button-5] { margin-left: 40px }
+  
+  #slider-wrapper #button-1:checked~#slider>ul { left: 0 }
+  #slider-wrapper #button-2:checked~#slider>ul { left: -100% }
+  #slider-wrapper #button-3:checked~#slider>ul { left: -200% }
+  #slider-wrapper #button-4:checked~#slider>ul { left: -300% }
+  #slider-wrapper #button-5:checked~#slider>ul { left: -400% }
