--- a/sass/main.scss
+++ b/sass/main.scss
@@ -27,4 +27,5 @@
 
 // contacts-page
 
-@import "./contacts/contacts.scss"
+@import "./contacts/contacts.scss";
+@import "./newsPage/newsCard.scss";
