--- a/css/main.css
+++ b/css/main.css
@@ -624,6 +624,7 @@ body {
 
 .contacts-conteiner {
   padding-top: 82px;
+  padding-bottom: 82px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
@@ -684,6 +685,11 @@ body {
   padding-top: 82px;
   grid-area: 3/1/4/3;
   text-align: center;
+}
+
+.partners > h3 {
+  font-size: 36px;
+  font-weight: 900;
 }
 
 .partners__list {
@@ -757,4 +763,70 @@ body {
 
 .contacts__form-button {
   margin-top: 41px;
+}
+
+.news__options {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  margin-top: 23px;
+  row-gap: 20px;
+}
+
+.news__options-paragraph {
+  grid-column-start: 2;
+  grid-row-start: 2;
+  margin-bottom: 17px;
+  font-size: 32px;
+}
+
+.news__description {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  row-gap: 47px;
+  padding-top: 18px;
+  padding-bottom: 184px;
+  font-size: 20px;
+}
+
+.news__description p {
+  grid-column-start: 2;
+}
+
+.news__main-image {
+  grid-column-start: 1;
+  grid-column-end: 3;
+}
+
+.news__description-blok {
+  grid-column-start: 2;
+}
+
+.news__description-blok h3 {
+  margin-bottom: 29px;
+  font-size: 36px;
+  font-weight: 900;
+}
+
+.quote {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  text-align: center;
+  font-size: 36px;
+  font-weight: 900;
+}
+
+.news__quote-author {
+  font-weight: 400;
+}
+
+.news__second-image {
+  grid-column-start: 2;
+  grid-column-end: 3;
+}
+
+.news__housing-description {
+  margin-top: 16px;
+  padding-bottom: 29px;
+  margin-bottom: 18px;
+  border-bottom: 1px solid #000;
 }/*# sourceMappingURL=main.css.map */
