--- a/sass/about/about.scss
+++ b/sass/about/about.scss
@@ -29,6 +29,9 @@
     grid-template-columns: repeat(3, 1fr);
 
     justify-items: center;
+    align-items: center;
+
+    padding-bottom: 131px;
 }
 
 .about__benefits-item{
@@ -40,4 +43,6 @@
 .about__benefits-item svg{
     display: block;
     margin-bottom: 31px;
+    margin-left: auto;
+    margin-right: auto;
 }
