--- a/sass/main.scss
+++ b/sass/main.scss
@@ -30,3 +30,4 @@
 @import "./contacts/contacts.scss";
 @import "./newsPage/newsCard.scss";
 @import "./about/about.scss";
+@import "./cookies.scss";
