--- a/css/contacts.css
+++ b/css/contacts.css
@@ -72,6 +72,11 @@
   display: flex;
   justify-content: center;
   margin-top: 32px;
+  align-items: center;
+}
+
+.partner-item:not(:last-child) {
+  margin-right: 50px;
 }
 
 .contacts__form {
