--- a/css/main.css
+++ b/css/main.css
@@ -295,6 +295,7 @@ body {
 }
 
 .news-conteiner {
+  position: relative;
   padding-bottom: 119.5px;
 }
 
@@ -696,6 +697,11 @@ body {
   display: flex;
   justify-content: center;
   margin-top: 32px;
+  align-items: center;
+}
+
+.partner-item:not(:last-child) {
+  margin-right: 50px;
 }
 
 .contacts__form {
@@ -852,6 +858,7 @@ body {
 
 .about__conteiner {
   padding-top: 104px;
+  padding-bottom: 118px;
 }
 
 .about__benefits-list {
@@ -872,4 +879,78 @@ body {
   margin-bottom: 31px;
   margin-left: auto;
   margin-right: auto;
+}
+
+.about__benefits-description {
+  margin-top: 12px;
+}
+
+.about__housing-list {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  justify-items: center;
+  margin-top: 45px;
+  margin-bottom: 45px;
+}
+
+.about_housing-item {
+  width: 577px;
+}
+
+.about_housing-item h3 {
+  margin-bottom: 32px;
+  font-size: 36px;
+  font-weight: 900;
+}
+
+.about_housing-item p {
+  font-size: 20px;
+}
+
+.cookies {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 936px;
+  background-color: #fed6b8;
+  border-radius: 20px;
+  box-shadow: 0px 0px 21px rgba(0, 0, 0, 0.25);
+}
+
+.cookies__conteiner {
+  padding: 38px 68px;
+}
+
+.cookies__header {
+  display: flex;
+  margin-bottom: 31px;
+  align-items: center;
+  font-size: 36px;
+  font-weight: 900;
+}
+
+.cookies__header svg {
+  margin-right: 23px;
+}
+
+.cookies__buttons {
+  margin-top: 25px;
+}
+
+.cookies__button-accept,
+.cookies__button-reject {
+  width: 194px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  font-size: 24px;
+  border-radius: 60px;
+  background-color: inherit;
+}
+
+.cookies__button-accept {
+  border: 2px solid #087313;
+}
+
+.cookies__button-reject {
+  border: 2px solid rgba(0, 0, 0, 0.09);
 }/*# sourceMappingURL=main.css.map */
