--- a/css/buttonList.css
+++ b/css/buttonList.css
@@ -21,4 +21,5 @@
   background-color: inherit;
   font-size: 20px;
   font-weight: 400;
+  cursor: pointer;
 }/*# sourceMappingURL=buttonList.css.map */
