--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,7 +16,7 @@
 @import "./mainPage/news/news.scss";
 
 // news-page
-@import "./newsPage/buttonList.scss";
+@import "./projectsPage/buttonList.scss";
 @import "./newsPage/newsConteiner.scss";
 
 // projects-page
