--- a/css/mainButton.css
+++ b/css/mainButton.css
@@ -8,4 +8,5 @@
   background-color: inherit;
   font-size: 24px;
   font-weight: 400;
+  cursor: pointer;
 }/*# sourceMappingURL=mainButton.css.map */
