--- a/sass/cookies.scss
+++ b/sass/cookies.scss
@@ -1,7 +1,7 @@
 .cookies {
   position: fixed;
-  bottom: 0;
-  left: 0;
+  bottom: 3%;
+  left: 2%;
   width: 936px;
   background-color: #fed6b8;
   border-radius: 20px;
@@ -34,6 +34,7 @@
   font-size: 24px;
   border-radius: 60px;
   background-color: inherit;
+  cursor: pointer;
 }
 
 .cookies__button-accept {
