--- a/sass/body.scss
+++ b/sass/body.scss
@@ -6,6 +6,12 @@ body {
     font-size: 48px;
     font-weight: 900;
   }
+
+  @media screen and (max-width: 767px){
+    .second-title {
+      font-size: 40px;
+    }
+  }
   
   .visually-hidden {
     position: absolute;
