--- a/css/body.css
+++ b/css/body.css
@@ -7,6 +7,11 @@ body {
   font-weight: 900;
 }
 
+@media screen and (max-width: 767px) {
+  .second-title {
+    font-size: 40px;
+  }
+}
 .visually-hidden {
   position: absolute;
   width: 1px;
