--- a/css/conteiner.css
+++ b/css/conteiner.css
@@ -5,4 +5,12 @@
   padding-right: 40px;
   margin-left: auto;
   margin-right: auto;
+}
+
+@media screen and (max-width: 767px) {
+  .conteiner {
+    max-width: 390px;
+    padding-left: 16px;
+    padding-right: 16px;
+  }
 }/*# sourceMappingURL=conteiner.css.map */
