--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,11 @@ body {
   font-weight: 900;
 }
 
+@media screen and (max-width: 767px) {
+  .second-title {
+    font-size: 40px;
+  }
+}
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -69,6 +74,13 @@ body {
   margin-right: auto;
 }
 
+@media screen and (max-width: 767px) {
+  .conteiner {
+    max-width: 390px;
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+}
 .main-button {
   display: block;
   margin: auto;
@@ -82,16 +94,24 @@ body {
   cursor: pointer;
 }
 
+@media screen and (min-width: 1280px) {
+  .header {
+    width: 100%;
+  }
+}
 .header {
   z-index: 2;
-  position: fixed;
-  width: 100%;
   height: 130px;
   top: 0;
   left: 0;
   background-color: #fff;
 }
 
+@media screen and (min-width: 768px) {
+  .header {
+    position: fixed;
+  }
+}
 .header-conteiner {
   display: flex;
   height: 100%;
@@ -107,15 +127,47 @@ body {
   height: 93px;
 }
 
-.nav {
-  display: flex;
+@media screen and (max-width: 767px) {
+  .logo-img {
+    width: 245px;
+    height: 77px;
+  }
+}
+.menu-button {
+  width: 130px;
+  height: 130px;
+  border: none;
+  border-radius: 50%;
+  background-color: rgb(246, 246, 246);
 }
 
+@media screen and (min-width: 767px) {
+  .menu-button {
+    display: none;
+  }
+}
 .nav-list {
-  display: flex;
   margin-left: auto;
 }
 
+@media screen and (max-width: 767px) {
+  .nav-list {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-height: 100%;
+    padding: 137px 40px;
+    width: 322px;
+    background-color: #fff;
+    opacity: 0;
+    pointer-events: none;
+  }
+}
+@media screen and (min-width: 768px) {
+  .nav-list {
+    display: flex;
+  }
+}
 .nav-item {
   padding-top: 48px;
   padding-bottom: 48px;
@@ -175,47 +227,61 @@ body {
 }
 
 .hero {
-  padding-top: 130px;
+  padding-top: 33px;
   background-color: #fff;
 }
 
+@media screen and (min-width: 768px) {
+  .hero {
+    padding-top: 130px;
+  }
+}
 .hero-conteiner {
   position: relative;
-  /* display: flex; */
-  display: grid;
-  /* grid-template-columns: 50% 50%; */
-  /* grid-template-rows: 25% 25% 25% 25%; */
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(4, 1fr);
-  /* grid-template-rows: [row1-start] 25% [row1-end] 25% [third-line] 25% [last-line]25%; */
 }
 
+@media screen and (min-width: 768px) {
+  .hero-conteiner {
+    /* display: flex; */
+    display: grid;
+    /* grid-template-columns: 50% 50%; */
+    /* grid-template-rows: 25% 25% 25% 25%; */
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    /* grid-template-rows: [row1-start] 25% [row1-end] 25% [third-line] 25% [last-line]25%; */
+  }
+}
 .main-title {
   display: block;
-  /* margin-top: 270px;
-    margin-bottom: 204px; */
-  /* grid-column-start: 1; */
-  /* grid-column-end: 2; */
-  /* grid-row-start: 2; */
-  /* grid-row-end: 3; */
-  grid-area: 2/1/3/2;
   align-self: center;
-  font-size: 64px;
+  font-size: 48px;
   font-weight: 900;
 }
 
+@media screen and (min-width: 768px) {
+  .main-title {
+    display: block;
+    grid-area: 2/1/3/2;
+    font-size: 64px;
+  }
+}
 .hero-contents {
-  position: absolute;
-  /* right: 0; */
-  /* top: 0; */
-  /* grid-column-start: 2; */
-  /* grid-column-end: 2; */
-  /* grid-row-start: 1; */
-  /* grid-row-end: 5; */
-  grid-area: 1/2/5/3;
-  margin-right: -40px;
+  margin-right: -16px;
 }
 
+@media screen and (min-width: 768px) {
+  .hero-contents {
+    position: absolute;
+    /* right: 0; */
+    /* top: 0; */
+    /* grid-column-start: 2; */
+    /* grid-column-end: 2; */
+    /* grid-row-start: 1; */
+    /* grid-row-end: 5; */
+    grid-area: 1/2/5/3;
+    margin-right: -40px;
+  }
+}
 .contents-text {
   margin-top: 19px;
   /* width: 764px; */
@@ -239,40 +305,68 @@ body {
 
 .housing-list {
   display: flex;
+  text-align: center;
   font-size: 16px;
   font-weight: 300;
 }
 
+@media screen and (max-width: 767px) {
+  .housing-list {
+    justify-content: center;
+  }
+}
 .housing-item:not(:last-child) {
-  margin-right: 113px;
+  margin-right: 33px;
 }
 
+@media screen and (min-width: 768px) {
+  .housing-item:not(:last-child) {
+    margin-right: 113px;
+  }
+}
 .housing-amount {
   display: block;
   font-size: 96px;
 }
 
 .projects-conteiner {
-  padding-top: 122px;
-  padding-bottom: 48px;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
+@media screen and (min-width: 768px) {
+  .projects-conteiner {
+    padding-top: 122px;
+    padding-bottom: 48px;
+  }
+}
 .projects-list {
-  padding-top: 41px;
-  padding-bottom: 48px;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  -moz-column-gap: 24px;
-       column-gap: 24px;
-  row-gap: 24px;
+  padding-top: 32px;
+  padding-bottom: 38px;
 }
 
+@media screen and (min-width: 768px) {
+  .projects-list {
+    padding-top: 41px;
+    padding-bottom: 48px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    -moz-column-gap: 24px;
+         column-gap: 24px;
+    row-gap: 24px;
+  }
+}
 .project-item {
   width: 384.33px;
   justify-self: center;
 }
 
+@media screen and (max-width: 767px) {
+  .project-item:not(:last-child) {
+    margin-bottom: 24px;
+  }
+}
 .projects-img {
   /* width: 384.33px; */
   /* height: 319.79px; */
@@ -299,22 +393,42 @@ body {
   padding-bottom: 119.5px;
 }
 
+@media screen and (max-width: 767px) {
+  .news-conteiner {
+    padding-bottom: 60px;
+  }
+}
 .news-list {
-  padding-top: 41px;
-  padding-bottom: 48px;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  -moz-column-gap: 24px;
-       column-gap: 24px;
-  row-gap: 24px;
+  padding-top: 32px;
+  padding-bottom: 38px;
 }
 
+@media screen and (min-width: 768px) {
+  .news-list {
+    padding-top: 41px;
+    padding-bottom: 48px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    -moz-column-gap: 24px;
+         column-gap: 24px;
+    row-gap: 24px;
+  }
+}
 .news-item {
-  width: 384.33px;
   justify-self: center;
 }
 
+@media screen and (max-width: 767px) {
+  .news-item:not(:last-child) {
+    margin-bottom: 24px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .news-item {
+    width: 384.33px;
+  }
+}
 .news-date {
   margin-top: 16px;
   font-size: 14px;
