--- a/css/news.css
+++ b/css/news.css
@@ -2,22 +2,42 @@
   padding-bottom: 119.5px;
 }
 
+@media screen and (max-width: 767px) {
+  .news-conteiner {
+    padding-bottom: 60px;
+  }
+}
 .news-list {
-  padding-top: 41px;
-  padding-bottom: 48px;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  -moz-column-gap: 24px;
-       column-gap: 24px;
-  row-gap: 24px;
+  padding-top: 32px;
+  padding-bottom: 38px;
 }
 
+@media screen and (min-width: 768px) {
+  .news-list {
+    padding-top: 41px;
+    padding-bottom: 48px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    -moz-column-gap: 24px;
+         column-gap: 24px;
+    row-gap: 24px;
+  }
+}
 .news-item {
-  width: 384.33px;
   justify-self: center;
 }
 
+@media screen and (max-width: 767px) {
+  .news-item:not(:last-child) {
+    margin-bottom: 24px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .news-item {
+    width: 384.33px;
+  }
+}
 .news-date {
   margin-top: 16px;
   font-size: 14px;
