--- a/sass/conteiner.scss
+++ b/sass/conteiner.scss
@@ -1,8 +1,16 @@
 .conteiner {
-    max-width: 1280px;
-    margin: 0;
-    padding-left: 40px;
-    padding-right: 40px;
-    margin-left: auto;
-    margin-right: auto;
+  max-width: 1280px;
+  margin: 0;
+  padding-left: 40px;
+  padding-right: 40px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media screen and (max-width: 767px) {
+  .conteiner {
+    max-width: 390px;
+    padding-left: 16px;
+    padding-right: 16px;
   }
+}
